# translator-for-slack

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml
src/translator_for_slack/: app.py  deepl_client.py
tests/: test_dl_client.py  test_gg_client.py
tfs/: app.py  deepl_client.py  google_client.py
translator_for_slack/: app.py  deepl_client.py
