[tool.poetry]
name = "translator-for-slack"
version = "0.1.0"
description = ""
authors = ["Ken Sato <ksato9700@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.15.0"
deepl = "^1.11.0"
google-cloud-translate = "^3.8.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^3.9.2"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
