[tool.poetry]
name = "translator-for-slack"
version = "0.3.0"
description = ""
authors = ["Ken Sato <ksato9700@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.18.1"
deepl = "^1.16.1"
google-cloud-translate = "^3.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = "^3.9.2"
black = "^23.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
