[project]
name = "translator-for-slack"
version = "0.4.0"
description = ""
authors = [{ name = "Ken Sato", email = "ksato9700@gmail.com" }]
dependencies = [
    "slack-bolt>=1.18.1",
    "deepl<2.0.0,>=1.17.0",
    "google-cloud-translate<4.0.0,>=3.15.2",
]
requires-python = ">=3.11,<4.0"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest<9.0.0,>=8.0.1",
    "flake8<8.0.0,>=7.0.0",
    "black<25.0.0,>=24.2.0",
    "pre-commit<4.0.0,>=3.6.2",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
